--- a/depositions.tex
+++ b/depositions.tex
@@ -42,7 +42,7 @@ Tabellen \ref{tab:deposition-comparison} und \ref{tab:deposition-materials} stel
     \textbf{CVD} &\cmark&?&\cmark&\cmark&\cmark&\cmark&?&?\\
     \textbf{ALD} &\cmark&?&\cmark&\cmark&\cmark&\cmark&\cmark&\cmark\\
   \end{tabularx}
-  \caption[Mögliche Produkte der Abscheidungsarten]{Mögliche Produkte der Abscheidungsarten. Weitergehende Informationen finden sich in der Literatur für PVD\cite{asd}, CVD\cite{asd} und ALD\cite{puurunen_surface_2005}.}
+  \caption[Mögliche Produkte der Abscheidungsarten]{Mögliche Produkte der Abscheidungsarten. Weitergehende Informationen finden sich in der Literatur für PVD\todo[inline]{cite}, CVD\todo[inline]{cite} und ALD\cite{puurunen_surface_2005}.}
   \todo[inline]{Referenzen für abgeschiedene Systeme}
   \label{tab:deposition-materials}
 \end{table}
