--- a/datastructures.tex
+++ b/datastructures.tex
@@ -117,71 +117,65 @@ Da beide Nachbarschaftssuchen in einander überführbar sind, ist ihre Komplexit
 Diese Operation sucht die Oberfläche, entweder entlang einer definierten Geraden oder im Umkreis eines Punktes.
 Die Art der Eingangsgröße kann von der aufrufenden Simulation zugunsten der Laufzeit gewählt werden.
 
+Hier bietet die Delaunay-Triangilation die besondere Eigenschaft, die Oberfläche eines Systems direkt ermitteln und in der Datenstruktur speichern zu können.
+Sie ist dann für den KMC-Teil der Simulation durch eine Menge von Oberflächenatomen charakterisiert, die sich mit jeder Schreiboperation auf der Struktur automatisch aktualisiert.
+Auch die Oberflächennormale ist dabei gegeben, ohne zusätzliche komplizierte Prüfungen anstellen zu müssen, so dass man beispielsweise Auftreffwahrscheinlichkeiten für KMC-Ereignisse ohne weiteres berechnen kann.
+Dafür muss man im Gegenzug den KMC-Algorithmus auf Zusammenarbeit mit der Triangulation anpassen, anstatt einen abstrakten Algorithmus mit expliziten Oberflächensuchen nutzen zu können.
+Aus diesen Gründen nehme ich die Komplexität im Rahmen der kombinierten KMC-MD-Simulation mit \BigO{1} als konstant an, obwohl eine explizite Oberflächensuche eine superlogarithmische Laufzeit hätte.
 
-\begin{table}
+\begin{table}[hb]
   \centering
   \begin{tabularx}{\textwidth}{X|*8c}
-    Datenstr.  &  Konstr.          &  Einfüg.          &  Modif            &  Entf.            &  Ortss.                &  NB-Su.               &  Oberfl.         &  RAM                          \\
+    Datenstr.  &  Konstr.          &  Einfüg.          &  Modif            &  Entf.            &  Ortss.                      &  NB-Su.               &  Oberfl.         &  RAM                          \\
     \hline
-    Atomliste  &  \cG{$n$}         &  \cG{$1$}         &  \cG{$1$}         &  \cG{$1$}         &  \cR{$n$}              &  \cR{$n$}             &  \cR{$n$}        &  \cG{$n$}                     \\
-    NB-Listen  &  \cY{$n\log{n}$}  &  \cR{$n$}         &  \cR{$n$}         &  \cR{$n$}         &  \cR{$n$}              &  \cG{$1$}             &  \cR{$n$}        &  \cR{$\frac{r_c^3}{s^3}n^2$}  \\
-    Binning    &  \cG{$n$}         &  \cG{$1$}         &  \cG{$1$}         &  \cG{$1$}         &  \cG{$r_s^3$}          &  \cG{$r_s^3$}         &  \cR{$c$}        &  \cY{$n+c$}                   \\
-    Octree     &  \cY{$n\log{c}$}  &  \cY{$\log{c}$}   &  \cY{$\log{c}$}   &  \cG{$1$}         &  \cY{$r_s^3\log{c}$}   &  \cY{$r_s^3\log{c}$}  &  \cY{$\log{c}$}  &  \cY{$n+c^\frac{2}{3}$}       \\
-    k-d-Baum   &  \cY{$n\log{n}$}  &  \cY{$\log{n}$}   &  \cY{$\log{n}$}   &  \cY{$\log{n}$}   &  \cY{$r_s^3\log{n}$}   &  \cY{$r_s^3\log{n}$}  &  \cY{$\log{n}$}  &  \cG{$n$}                     \\
-    Delaunay   &  \cY{$n\log{n}$}  &  \cY{$k\log{k}$}  &  \cY{$k\log{k}$}  &  \cY{$k\log{k}$}  &  \cG{$r_s^3+\log{n}$}  &  \cG{$r_s^3$}         &  \cG{$1$}        &  \cY{$nk$}                    \\
+    Atomlisten  &  \cG{$n$}         &  \cG{$1$}         &  \cG{$1$}         &  \cG{$1$}         &  \cR{$n$}                    &  \cR{$n$}             &  \cR{$n$}        &  \cG{$n$}                     \\
+    NB-Listen  &  \cY{$n\log{n}$}  &  \cR{$n$}         &  \cR{$n$}         &  \cR{$n$}         &  \cR{$n$}                    &  \cG{$1$}             &  \cR{$n$}        &  \cR{$\frac{r_c^3}{s^3}n^2$}  \\
+    Binning    &  \cG{$n$}         &  \cG{$1$}         &  \cG{$1$}         &  \cG{$1$}         &  \cG{$r_s^3$}                &  \cG{$r_s^3$}         &  \cR{$c$}        &  \cY{$n+c$}                   \\
+    Octree     &  \cY{$n\log{c}$}  &  \cY{$\log{c}$}   &  \cY{$\log{c}$}   &  \cG{$1$}         &  \cY{$r_s^3\log{c}$}         &  \cY{$r_s^3\log{c}$}  &  \cY{$\log{c}$}  &  \cY{$n+c^\frac{2}{3}$}       \\
+    k-d-Baum   &  \cY{$n\log{n}$}  &  \cY{$\log{n}$}   &  \cY{$\log{n}$}   &  \cY{$\log{n}$}   &  \cY{$r_s^3\log{n}$}         &  \cY{$r_s^3\log{n}$}  &  \cY{$\log{n}$}  &  \cG{$n$}                     \\
+    Delaunay   &  \cY{$n\log{n}$}  &  \cY{$k\log{k}$}  &  \cY{$k\log{k}$}  &  \cY{$k\log{k}$}  &  \cG{$r_s^3+n^\frac{1}{3}$}  &  \cG{$r_s^3$}         &  \cG{$1$}        &  \cY{$nk$}                    \\
     \hline
-    %Atomfeld  &  \cG{$n$}         &  \cG{$1$}         &  \cG{$1$}         &  \cG{$1$}         &  \cR{$n$}              &  \cR{$n$}             &  \cR{$n$}        &  \cG{$n$}                     \\
+    %Atomfeld  &  \cG{$n$}         &  \cG{$1$}         &  \cG{$1$}         &  \cG{$1$}         &  \cR{$n$}                    &  \cR{$n$}             &  \cR{$n$}        &  \cG{$n$}                     \\
   \end{tabularx}
   \vspace{1em}
-  \begin{tabularx}{0.7\textwidth}{*3C}
-    \cG{optimal} & \cY{annehmbar} & \cR{Bottleneck} \\
+  \begin{tabularx}{0.8\textwidth}{C*3C}
+    &\cG{optimal} & \cY{annehmbar} & \cR{impraktikabel} \\
   \end{tabularx}
-  \label{tab:dataruntimes}
-  \caption[Laufzeitabschätzung genutzter Operationen auf verschiedenen Datenstrukturen]{
-    Abschätzung des Speicheraufwands und der asymptotischen Laufzeit ausgewählter Operationen auf verschiedenen Datenstrukturen
-    \\
+  \caption[Laufzeitabschätzung abstrakter Operationen auf verschiedenen Datenstrukturen]{
+    Abschätzung des Speicheraufwands und der asymptotischen Laufzeit der vorgestellten Operationen auf verschiedenen Datenstrukturen für kompakte Oberflächensysteme in drei Raumdimensionen.
+    \todo[inline]{Referenzen oder Erklärungen}.
   }
+  \label{tab:dataruntimes}
 \end{table}
 
-\subsection{Klassen von Datenstrukturen}
+\subsection{Kategorien von Datenstrukturen}
 
-Die Vielzahl der verfügbaren Datenstrukturen und Algorithmen lassen sich in generelle Kategorien nach ihrer Arbeitsweise einordnen.
-Diese teilen ihre Funktionsweise, so dass Algorithmen innerhalb der Klasse oftmals austauschbar sind.
+Durch Unterschiede in der Funktionsweise verschiedener Algorithmen und Datenstrukturen ergeben sich für sie Kategorien, die generelle Eigenschaften wie die Laufzeit teilen.
+Während der Entwicklung und Implementierung des Parsivald-Modelles wurden Algorithmen aus den folgenden Kategorien in Betracht gezogen.
 
 \subsubsection{Listen}
 
-Listen sind die einfachste Datenstruktur zur Behandlung von Punktwolken.
-Die einzelnen Atome werden in einer Liste gespeichert, wodurch Manipulationsoperationen in optimaler konstanter Zeit möglich sind, Nachbarschaftsoperationen andererseits Vergleiche mit sämtlichen Atomen anstellen müssen, wodurch die Laufzeit der zeitkritischen Operationen die Worst-Case-Laufzeit von \BigO{n} annimmt.
+Listen von Atomen sind die einfachste Datenstruktur zur Behandlung von Punktwolken, da sie neben den Atompositionen, -typen und einer beliebigen Laufnummer keine weiteren Informationen beinhalten.
+Die einzelnen Atome werden in einer globalen Liste verwaltet, wodurch Manipulationsoperationen in optimaler konstanter Zeit möglich sind, Nachbarschaftsoperationen und Positionsvergleiche andererseits Vergleiche mit sämtlichen Atomen benötigen und somit die Worst-Case-Laufzeit von \BigO{n} annehmen.
+
+Für große Systeme sind listenbasierte Ansätze folglich ungeeignet, wie man an deren Laufzeiten in Tabelle \ref{tab:dataruntimes} erkennen kann.
 
 \subsubsection{Nachbarschaftslisten}
 
-Nachbarschaftslisten sind Atomlisten, die für jedes Atom eine Referenz zu allen Atomen innerhalb einer begrenzten Nachbarschaft beinhalten.
-Diese Referenzen müssen bei jeder Manipulation aufwendig aktualisiert werden, wodurch im Gegenzug die Nachbarschaftssuche in konstanter Zeit (\BigO{1}) beziehungsweise je bei weiteren Anforderungen mit \BigO{r} skalieren.
-Nachbarschaftslisten verringern in MD-Simulationen mit Kraftfeldern mit begrenzter Reichweite die Programmlaufzeit signifikant, bei häufigen Aktualisierungen bietet sich jedoch auch Binning an.
-
-Der Vollständigkeit halber möchte ich erwähnen, dass einige der \BigO{n}-Operationen durch clevere Optimierung und Suche innerhalb der direkten Nachbarschaft beispielsweise auf \BigO{rk} reduziert werden kann.
-Bei großen Verschiebungen der Atomposition muss dafür zuvor einer der Nachbarn gesucht werden, wodurch sich erneut eine \BigO{n}-Operation vorschiebt und die asymptotische Laufzeit wieder auf \BigO{n} erhöht wird.
+Nachbarschaftslisten sind eine Form von Atomlisten, die zusätzlich zur Position jedes Atoms auch eine Liste von Referenzen auf alle Atome in dessen Nachbarschaft speichern.
+Diese müssen aber bei jeder Manipulation aufwendig aktualisiert werden, wodurch im Gegenzug die Nachbarschaftssuche in konstanter Zeit \BigO{1} möglich ist.
+Für MD-Simulationen mit reichweitenbegrenzten Kraftfeldern bieten sich Nachbarschaftslisten zur signifikanten Reduktion der Programmlaufzeit an.
+Dabei muss erwähnt werden, dass einige der \BigO{n}-Operationen durch geeignete Optimierungen auf Laufzeiten von \BigO{rk} reduzieren lassen, jedoch basieren diese meist auf häufigen Aktualisierungen bei geringen relativen Atombewegungen.
+Unterliegen die Positionsänderungen größeren Schritten, wie es beim Parsivald-Modell durch seine separaten atomistischen Simulationen der Fall ist, ergeben sich grenzwertig wieder \BigO{n}-Abhängigkeiten.
 
 \subsubsection{Binning}
 
-Eine implizite Möglichkeit, die lokale Nachbarschaft zu referenzieren, findet man in Binning.
-Dafür zerlegt man den Raum in kleinere Quader, in denen man die enthaltenen Atome referenziert.
-Die Nachbarn ergeben sich dann aus einer Suche innerhalb der benachbarten Quader.
-Notwendig ist eine eindeutige Addressierung der Quader aus der Atomposition sowie die Suche der benachbarten Quader, die auch bei periodischen Simulationsräumen eindeutig ist.
+Eine implizite Möglichkeit, die lokale Nachbarschaft zu referenzieren, findet man in Binning-Methoden, die die Zuordnung von räumlichen Positionen in meist quaderförmige Raumbereiche, Bins genannt, umfassen.
+Dafür zerlegt man den Raum in kleinere, leicht addressierbare Quader, für die man Listen der enthaltenen Atomepflegt, die nur noch bei Überschreitung der Quadergrenzen aktualisiert werden müssen.
+Die Nachbarn ergeben sich dann aus einer Suche innerhalb der benachbarten Quader in Abhängigkeit des Suchradius', wobei periodische Systemgrenzen durch relative Addressierung der Bins elegant versteckt werden.
 
-\subsubsection{Suchbäume}
-
-Eine andere Möglichkeit, Bäume für die Optimierung von Suchfunktionen zu nutzen, findet sich in k-dimensionalen Bäumen, auch k-d-Trees genannt.
-Diese sind eine rekursive Datenstruktur, die alle Atome entlang einer Hauptachse sortieren, das Median-Element als Root-Knoten herausnehmen und jeweils aus der linken und rechten Seite einen neuen k-d-Baum aufbauen.
-Nicht ganz offensichtlich ist damit jede Nachbarschafts- und Ortssuche in \BigO{N_r\log{n}} möglich.\todo{N - Obere Schranke der Zahl der Nachbarn innerhalb des Suchradius}{}
-Dies geht auf Kosten der Manipulationsoperationen, die in \BigO{\log{n}} laufen.
-
-\subsubsection{Triangulationen}
-
-Triangulationen kann man als eine spezielle Form von Nachbarschaftslisten betrachten.
-Sie teilen den gesamten Raum in nicht-überschneidende k-Simplexe, deren Ecken auf vordefinierten Punkten liegen.
-Damit teilen sich alle Atome mindestens einen Simplex mit ihrem nächsten Nachbarn, jedoch nicht notwendigerweise mit allen Nachbarn innerhalb eines bestimmten Radius'.
-Triangulationen werden in verschiedenen Varianten genutzt, wobei in dieser Arbeit die populäre Delaunay-Triangulation aufgrund ihrer Dualität zu Voronoi-Diagrammen und der direkten Verbindung zu Alpha-Formen betrachtet wird.
+Die Bins selbst lassen sich nun wiederum in Listen, mehrdimensionalen Gittern oder Baumstrukturen speichern, wobei jede Methode ihre eigenen Vor- und Nachteile hat.
+Im Rahmen der Arbeit wurden hauptsächlich Octrees genutzt, wie sie in Abschnitt \ref{dataoctree} beschrieben werden.
 
 \begin{figure}[bhpt]
   \captionsetup[subfigure]{singlelinecheck=false}{
@@ -195,7 +189,7 @@ Triangulationen werden in verschiedenen Varianten genutzt, wobei in dieser Arbei
     \hfill
     \begin{subfigure}[t]{\subfigwidth}
       \includegraphics[width=\textwidth]{datastructures-b}
-      \subcaption{k-d-Arrays}
+      \subcaption{Binning}
       \label{fig:datastructures-a}
     \end{subfigure}
     \hfill
@@ -211,70 +205,96 @@ Triangulationen werden in verschiedenen Varianten genutzt, wobei in dieser Arbei
       \label{fig:datastructures-a}
     \end{subfigure}
   }
-  \caption[Übersicht über räumliche Datenstrukturen]{Übersicht über räumliche Datenstrukturen}
+  \caption[Übersicht über räumliche Datenstrukturen]{
+    Übersicht über Raumzerlegungen einiger Datenstrukturen.
+    k-d-Bäume (d) beinhalten in jeder Zelle nur ein Atom, weshalb sich die Zellgrenzen entlang der Atompositionen formen.
+    Octrees (c) dagegen haben vordefinierte Grenzen, aber prägen nur besetzte Zellen aus, wodurch leere Raumbereiche effizient von Suchoperationen ausgeschlossen sind.
+}
   \label{fig:datastructures}
 \end{figure}
 
-\subsection{\todo{rename}{Berücksichtigte Datenstrukturen}}
+\subsubsection{Suchbäume}
 
-\subsubsection{Octree-Binning}
-Octree-Binning ist eine mögliche Optimierung der Binning-Methode, bei der man zur Aufteilung des Raumes nicht auf k-dimensionale Arrays, sondern auf einen sogenannten Octree zurück greift.
-Als diesen bezeichnet man eine dreidimensionale Struktur, die eine Zelle rekursiv in je 8 gleichartige Zellen halber Breite aufteilt, bis man eine gewünschten Zellgröße erreicht.
-Durch Bitoperationen lassen sich die Zellen effizient und identisch zu k-d-Arrays addressieren, jedoch ist jede Zelladdressierung auf dem Baum mit einer \BigO{\log{c}}-Operation verbunden.
-Der Hauptunterschied findet sich jedoch in der Oberflächen- und Ortssuche:
-8 benachbarte, leere Zellen können effektiv zu einer Superzelle zusammen gefasst werden, die bei Suchoperationen gemeinsam übersprungen werden.
-Somit reduziert sich die Speicherkomplexität von großen dreidimensionalen Dünnschichtsystemen auf die Komplexität eines zweidimensionalen Systemes, auf Kosten zusätzlicher Buchhaltung mit \BigO{\log{c}}-Komplexität.
+Eine andere Möglichkeit, Bäume für die Optimierung von Suchfunktionen zu nutzen, findet sich in k-dimensionalen Bäumen, auch k-d-Bäume genannt.
+Diese sind rekursive Datenstrukturen, die alle Atome entlang einer Hauptachse sortieren, das Median-Element als Root-Knoten herausnehmen und jeweils aus den beiden verbleibenden Atommengen einen neuen k-d-Baum entlang der zyklisch nächsten Hauptachse aufbauen.
+Der Hauptnutzen dieses Ansatzes findet sich in vereinfachten Nachbarschafts- und Ortssuchen, die jeweils in \BigO{k_r\log{n}} möglich sind, was bei den untersuchten Systemen \BigO{r_s^3\log{n}} entspricht.
+Da es sich bei k-d-Bäumen um einen Lehrbuchansatz bei Nachbarschafts- und Suchproblemen handelt, werden sie nachfolgend in Abschnitt \ref{datakdtree} eingehender beschrieben.
 
+\subsubsection{Triangulationen}
 
-\begin{algorithm}
-  \begin{algorithmic}
-    \Input $atoms$ - Liste von Atomen
-    \Input $size[3]$ - Größe des Simulationsraumes
-    \Input $depth$ - Tiefe des Octrees. Legt die Zellgröße fest
-    \Assumption Alle Atome befinden sich im Simulationsraum
-    \Result Stammzelle eines Octrees, der alle Atome enthält
-    \State
-    \Function{construct-octree}{$atoms, size, depth$}
-    \State $cellsize[0] \gets size[0]\cdot2^{-depth}$
-    \State $cellsize[1] \gets size[1]\cdot2^{-depth}$
-    \State $cellsize[2] \gets size[2]\cdot2^{-depth}$
-    \State $root \gets$ new Octree($depth$)
-    \ForAll{$atom$ in $atoms$}
-    \State $cellindex[0] \gets \lfloor atom.pos[0] / cellsize[0] \rfloor$
-    \State $cellindex[1] \gets \lfloor atom.pos[1] / cellsize[1] \rfloor$
-    \State $cellindex[2] \gets \lfloor atom.pos[2] / cellsize[2] \rfloor$
-    \State $cell \gets$ \Call{getcell-octree}{$root, cellindex$, true}
-    \State \Call{addatom}{cell, atom}
-    \EndFor
-    \State \Return $root$
-    \EndFunction
-  \end{algorithmic}
-  \label{alco:octree-construction}
-  \caption[Octree-Konstruktion]{Octree-Konstruktion: Es handelt sich um einen typischen Binning-Algorithmus, dessen Octree-Eigenschaften in der Funktion \Call{getcell-octree}{} liegen.}
-\end{algorithm}
+Triangulationen kann man als eine spezielle Form von Nachbarschaftslisten betrachten, bei denen ausgeprägte Nachbarschaftsbedingungen besonderen Kriterien unterliegen.
+Sie zerlegen die konvexe Hülle der Punktwolke in eine Menge von raumfüllenden, nicht-überschneidenden k-Simplexen\footnote{Ein k-Simplex ist ein Objekt in k Dimensionen mit k+1 Eckpunkten, die untereinander mit geraden Kanten verbunden sind. Somit ist ein 1-Simplex eine Linie, ein 2-Simplex ein Dreieck, ein 3-Simplex ein Tetraeder, usw.}, deren Ecken auf Elementen der Punktwolke liegen.
+Damit teilen sich alle Atome mindestens einen Simplex mit ihrem nächsten Nachbarn, jedoch nicht notwendigerweise mit allen Nachbarn innerhalb eines bestimmten Radius'.
+Für Triangulationen gibt es verschiedene Ausprügungen der Kriterien, wobei in dieser Arbeit die populäre Delaunay-Triangulation aufgrund ihrer Dualität zu Voronoi-Diagrammen und der direkten Verbindung zur Alpha-Form in Abschnitt \ref{datadelaunay} betrachtet wird.
+
+\subsection{Effiziente Datenstrukturen}
+
+Zur Betrachtung der vorgestellten Probleme bieten sich nur eine Auswahl der angesprochenen Datenstrukturen an, da die asymptotischen Laufzeiten der Suchoperationen auf den ausgeschlossenen Strukturen oberhalb der Praktikabilitätsgrenze liegen.
+Als effiziente und damit interessante Datenstrukturen werden weiterhin Octrees, k-d-Bäume und Delaunay-Triangulationen behandelt.
+
+\subsubsection{Octree-Binning}\label{dataoctree}
+Octree-Binning ist eine mögliche Optimierung der angesprochenen Binning-Methode, bei der man zur Aufteilung des Raumes nicht auf Zellgitter, sondern einen Octree zurück greift.
+Als diesen bezeichnet man eine dreidimensionale Struktur, die eine quaderförmige Zelle rekursiv in 8 geometrisch ähnliche Unterzellen halber Breite aufteilt, bis man eine gewünschten Auflösung erreicht.
+Der Vorteil liegt in der ausschließlichen Erstellung der Unterzellen, die im Rahmen der Simulation von Interesse sind, sowie der Betrachtung leerer Raumbereiche als zusammengefasste Superzelle, wie Abbildung \ref{fig:octree} darstellt.
+Für die angestrebte Anwendung sind dies die Raumbereiche, in denen sich Atome befinden.
+Vorteile typischen Binnings mit seinen effizienten Nachbarschaftssuchen bleiben erhalten, jedoch ergeben sich gegenüber Zellgittern effizientere Oberflächensuchen, deren Effizienzsteigerung auf die Möglichkeit des Überspringens leerer Raumbereiche zurückzuführen ist.
+Auch verringert sich der Speicherbedarf aller Zellen bei dreidimensionalen Oberflächensystemen auf die eines zweidimensionalen Systemes, da effektiv nur Zellen an der Oberfläche erstellt und durchsucht werden müssen.
+Theoretisch sind mit Access Caching, Bitweiser Addressierung, Surface Flagging oder Height Mapping noch weitere Optimierungen möglich, die jedoch nur den Laufzeitfaktor, jedoch nicht die asymptotische Laufzeit beeinflussen und daher nur am Rand genannt sein sollen.
+Algorithmus \ref{algo:octree-addressing} skizziert die Addressierung der Zelle eines Octrees und zeigt auch deren Schwachpunkt:
+Um eine einzige Zelle per absolutem oder globalem Index abzurufen, sind Operationen der Komplexität \BigO{\log{c}} notwendig, die bei häufigen Zellzugriffen und großen Systemen zu Leistungseinbrüchen führen können.
+
+CONTINUEHERE
+
+%% \begin{algorithm}
+%%   \begin{algorithmic}
+%% %    \Input $atoms$ - Liste der Atome
+%% %    \Input $size[3]$ - Größe des Simulationsraumes
+%% %    \Input $depth$ - Tiefe des Octrees (Legt die Zellgröße fest)
+%% %    \Assumption Alle Atome befinden sich im Simulationsraum
+%% %    \Result Stammzelle eines Octrees, der alle Atome enthält
+%%     \State
+%%     \Function{construct-octree}{$atoms, spacesize, depth$}
+%%     \State $cellsize[0] \gets spacesize[0]\cdot2^{-depth}$
+%%     \State $cellsize[1] \gets spacesize[1]\cdot2^{-depth}$
+%%     \State $cellsize[2] \gets spacesize[2]\cdot2^{-depth}$
+%%     \State $root \gets$ new Octree($depth$)
+%%     \ForAll{$atom$ in $atoms$}
+%%     \State $cellindex[0] \gets \lfloor atom.pos[0] / cellsize[0] \rfloor$
+%%     \State $cellindex[1] \gets \lfloor atom.pos[1] / cellsize[1] \rfloor$
+%%     \State $cellindex[2] \gets \lfloor atom.pos[2] / cellsize[2] \rfloor$
+%%     \State $cell \gets$ \Call{getcell-octree}{$root, cellindex$, true}
+%%     \State \Call{add-atom}{cell, atom}
+%%     \EndFor
+%%     \State \Return $root$
+%%     \EndFunction
+%%   \end{algorithmic}
+%%   \caption[Octree-Konstruktion]{Octree-Konstruktion: Es handelt sich um einen typischen Binning-Algorithmus, dessen Octree-Eigenschaften in der Funktion \Call{getcell-octree}{} liegen.}
+%%   \label{alco:octree-construction}
+%% \end{algorithm}
 
 \begin{figure}[tbhp]
   \centering
   \includegraphics[width=\textwidth]{octree}
   \label{fig:octree}
-  \caption[Quadtree-Veranschaulichung eines Octrees]{Quadtree (2d) zur Veranschaulichung der Funktionsweise eines Octrees (3d):\\
-    Rekursive Unterteilung der interessanten Zellen bis zur gewünschten Auflösung, dann zellweises Binning.
-    Dabei werden nur benutzte Zellen dynamisch allokiert, wodurch sich bei Oberflächensystemen Einsparungen in Speicherverbrauch und Laufzeit ergeben.
+  \caption[Funktionsweise eines Octrees]{Quadtree (2d-Äquivalent des Octrees) zur Veranschaulichung der Funktionsweise eines Octrees:
+    Räumliche Unterteilung und deren die Baum-Darstellung.
+    Rekursive Zerlegung der interessanten Zellen bis zur gewünschten Auflösung in Ebene 4, dann zellweises Binning der Atome.
   }
 \end{figure}
 
 \begin{algorithm}
   \begin{algorithmic}
-    \Input $root$ - Stammzelle des Octrees
-    \Input $index[3]$ - globale Adresse der Zielzelle
-    \Input $allocate$ - Ob die Zelle neu erstellt werden soll
+%    \Input $root$ - Stammzelle des Octrees
+%    \Input $i[3]$ - globale Adresse der Zielzelle
+%    \Input $allocate$ - Ob die Zelle neu erstellt werden soll
     \Result null falls leer, sonst Zielzelle
     \State
-    \Function{getcell-octree}{root, index, allocate}
-    \State $depth \gets $\Call{depth}{root}
-    \Comment{Tiefe, an der sich die Zielzellen befinden}
-    \State $cell \gets root$
-    \While{$depth > 0$}
+    \Function{getcell-octree}{$cell, id, allocate$}
+    \State $d \gets $\Call{depth}{root}
+    \Comment{Relative Tiefe, an der sich die Zielzellen befinden}
+    \If{$d = 0$}
+    \State\Return cell
+    \EndIf
     \If{not $cell.children$}
     \If{allocate}
     \State $cell.children \gets $new cell[8]
@@ -282,17 +302,14 @@ Somit reduziert sich die Speicherkomplexität von großen dreidimensionalen Dün
     \State \Return null
     \EndIf
     \EndIf
-    \State $depth \gets depth-1$
-    \State $childid \gets $\Call{bitand}{index[0], $2^{depth}$}
-    \State $childid \gets childid+2\cdot$\Call{bitand}{index[1], $2^{depth}$}
-    \State $childid \gets childid+4\cdot$\Call{bitand}{index[2], $2^{depth}$}
-    \State \Comment{Indiziert die Subzelle aus der globalen Position}
-    \State $cell \gets cell.children[childid]$
-    \EndWhile
-    \State\Return cell
+    \State $childid \gets $\Call{bitand}{id[0], $2^{d-1}$}
+    + $2\cdot$\Call{bitand}{id[1], $2^{d-1}$}
+    + $4\cdot$\Call{bitand}{id[2], $2^{d-1}$}
+%    \State \Comment{Indiziert die Subzelle aus der globalen Position}
+    \State \Return\Call{getcell-octree}{$cell.children[childid], i, allocate$}
     \EndFunction
   \end{algorithmic}
-  \caption[Zell-Addressierung in Octrees]{Zell-Addressierung und -Allokierung im Octree: Bei jedem Schritt wird der Raum in 2 Unterzellen je Raumdimension geteilt, woraus eine Laufzeit von \BigO{\log{depth}} resultiert}
+  \caption[Zell-Addressierung in Octrees]{Rekursive Zell-Addressierung und -Allokierung im Octree: Bei jedem Schritt wird das Problem in 8 Unterzellen geteilt, woraus eine Laufzeit von \BigO{d}$=$\BigO{\log{c}} resultiert}
   \label{algo:octree-adressing}
 \end{algorithm}
 
@@ -359,7 +376,7 @@ Die Modifikationsoperationen selbst bleiben unverändert.
 Der größte Nachteil eines k-d-Baumes bleibt jedoch die Eigenschaft, beim Hinzufügen von Atomen beispielsweise entlang der z-Richtung stetig unbalancierter zu werden, wodurch Up\-date-Opera\-tionen auf dem gesamten Baum notwendig wären.
 Diese sind mit der geringen Konstruktionszeit zwar vertretbar, allerdings unnötig in Hinblick auf andere Methoden, wie Octrees und Delaunay-Triangulationen.
 
-\subsection{Delaunay-Triangulation}
+\subsection{Delaunay-Triangulation}\label{datadelaunay}
 
 \begin{figure}[bhpt]
   \centering
